--- a/working/L11_TheTransientUniverse.ipynb
+++ b/working/L11_TheTransientUniverse.ipynb
@@ -13,7 +13,18 @@
    "execution_count": 1,
    "id": "3f7c3553",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\loren\\anaconda3\\lib\\site-packages\\pandas\\core\\computation\\expressions.py:21: UserWarning: Pandas requires version '2.8.4' or newer of 'numexpr' (version '2.8.1' currently installed).\n",
+      "  from pandas.core.computation.check import NUMEXPR_INSTALLED\n",
+      "C:\\Users\\loren\\anaconda3\\lib\\site-packages\\pandas\\core\\arrays\\masked.py:60: UserWarning: Pandas requires version '1.3.6' or newer of 'bottleneck' (version '1.3.4' currently installed).\n",
+      "  from pandas.core import (\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "from scipy import stats\n",
@@ -36,7 +47,7 @@
    "id": "7f6ebdaf",
    "metadata": {},
    "source": [
-    "I read in solution/transient.npy. This is a (100 x 3) numpy array, containing some time-series measurements from a transient phenomenon. The first column is time (arbitrary units), the second column is the flux (arbitrary units), and the third column are homoescedastic measurement uncertainties on the flux. Plot this data with the uncertainties."
+    "I read in solution/transient.npy. This is a (100 x 3) numpy array, containing some time-series measurements from a transient phenomenon. The first column is time (arbitrary units), the second column is the flux (arbitrary units), and the third column are homoescedastic measurement uncertainties on the flux. "
    ]
   },
   {
@@ -57,7 +68,7 @@
    "id": "d93e1739",
    "metadata": {},
    "source": [
-    "First look at the data"
+    "I plot this data with the uncertainties."
    ]
   },
   {
@@ -93,9 +104,9 @@
    "metadata": {},
    "source": [
     "One possible model for this data is a sharp burst with an exponential tail rising above a nominal background level. This model can be described as:\n",
-    "<center> $y = b, for \\ t \\ < \\ t_0$ </center>\n",
-    "<center> $y = b + Ae^{-\\alpha (t-t_0)}, for \\ t \\ > \\ t_0$ </center>\n",
-    "where $\\textbf{b}$, is the background amplitude, $\\textbf{A}$ is the burst amplitude, $\\textbf{t_0}$ is the burst epoch, and $\\textbf{\\alpha}$ encodes how rapidly the burst dies off."
+    "<center> $y = b$, for $\\ t \\ < \\ t_0$ </center>\n",
+    "<center> $y = b + Ae^{-\\alpha (t-t_0)}$, for $\\ t \\ > \\ t_0$ </center>\n",
+    "where $b$, is the background amplitude, $A$ is the burst amplitude, $t_0$ is the burst epoch, and $\\alpha$ encodes how rapidly the burst dies off."
    ]
   },
   {
@@ -103,18 +114,7 @@
    "execution_count": 4,
    "id": "fbf916dd",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'b = uniform.rvs(0, 50)\\nA = uniform.rvs(0, 50)\\nt_0 = uniform.rvs(0, 100)\\nalpha = np.exp(uniform.rvs(-5,5))'"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def model(time, A, b, t_0, alpha):\n",
     "    model_array = []\n",
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "id": "74b8b91a",
    "metadata": {},
    "outputs": [
