--- a/working/L17_SupernovaDistances-PyMC.ipynb
+++ b/working/L17_SupernovaDistances-PyMC.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "8cf9329e",
+   "metadata": {},
+   "source": [
+    "# Supernova distances and redshifts - part I"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 48,
    "id": "83c9fe06",
@@ -11,6 +19,14 @@
     "import numpy as np\n",
     "from sklearn.linear_model import LinearRegression\n",
     "from astroML.linear_model import PolynomialRegression"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5e1bc144",
+   "metadata": {},
+   "source": [
+    "At high redshifts, the relation between distance and redshift can be studied through Type Ia Supernovae, which are standard candles. Here it follow some supernova data."
    ]
   },
   {
@@ -52,6 +68,16 @@
     "plt.legend(loc='lower right')\n",
     "plt.xlim(0,2)\n",
     "plt.ylim(35,50)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1b7918d1",
+   "metadata": {},
+   "source": [
+    "I can recall the relation between the magnitude $\\mu$ and the redshift $z$:\n",
+    "\n",
+    "</center> $$ \\mu = m - M = 5 \\log_{10}\\left( \\frac{d_L}{pc} \\right) $$ </center>"
    ]
   },
   {
@@ -259,8 +285,6 @@
     "    y_fit_poly = model.predict(z[:, np.newaxis])\n",
     "\n",
     "    ax.plot(z, y_fit_poly, '--r')\n",
-    "    #ax.set_ylim(-0.1, 2.1)\n",
-    "    #ax.set_xlim(-0.2, 3.2)\n",
     "    if i in (1, 2):\n",
     "        ax.yaxis.set_major_formatter(plt.NullFormatter())\n",
     "    else:\n",
@@ -277,6 +301,14 @@
     "\n",
     "print('Maybe the right degree for our fit is around 2 or 3')\n",
     "print('For a degree bigger than 4 we may over-fit the data')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7ce7b4bf",
+   "metadata": {},
+   "source": [
+    "Let's try to get higher with degrees."
    ]
   },
   {
@@ -317,6 +349,14 @@
     "    plt.legend(loc='upper left', bbox_to_anchor=(0.1, 1.0))\n",
     "    \n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bfd6857b",
+   "metadata": {},
+   "source": [
+    "I can see that, the higher the degree is, the more the model is overfitting the data."
    ]
   },
   {
@@ -628,6 +668,7 @@
     "y = p.predict(z_train)\n",
     "\n",
     "lin_reg = LinearRegression()\n",
+    "\n",
     "# Ten training sample sizes from 10% to 100%\n",
     "train_sizes, train_scores_linreg, test_scores_linreg = \\\n",
     "    learning_curve(lin_reg, Xscaled, y, train_sizes=np.linspace(0.1, 1, 10), \\\n",
@@ -641,7 +682,7 @@
     "plt.xlabel(\"Train size\",fontsize=14)\n",
     "plt.ylabel(\"Mean Squared Error\",fontsize=14)\n",
     "plt.title('Learning curves',fontsize=14)\n",
-    "plt.legend(loc=\"best\")\n",
+    "plt.legend(loc=\"lower right\")\n",
     "\n",
     "plt.show()"
    ]
@@ -693,7 +734,7 @@
     "plt.plot(z, mu_fit, label = 'Fit using trained data')\n",
     "\n",
     "\n",
-    "plt.errorbar(z_train, mu_train, dmu_train, fmt='.b', ecolor='blue', lw=1, label='Training dataset')\n",
+    "plt.errorbar(z_train, mu_train, dmu_train, fmt='.b', ecolor='black', lw=1, label='Training dataset')\n",
     "plt.errorbar(z_val, mu_val, dmu_val, fmt='.r', ecolor='red', lw=1, label='Validation dataset')\n",
     "\n",
     "plt.xlabel('z')\n",
@@ -799,7 +840,7 @@
     "plt.plot(z, mu_fit, label = 'Fit using trained data')\n",
     "\n",
     "\n",
-    "plt.errorbar(z_train, mu_train, dmu_train, fmt='.b', ecolor='blue', lw=1, label='Training dataset')\n",
+    "plt.errorbar(z_train, mu_train, dmu_train, fmt='.b', ecolor='black', lw=1, label='Training dataset')\n",
     "plt.errorbar(z_val, mu_val, dmu_val, fmt='.r', ecolor='red', lw=1, label='Validation dataset')\n",
     "\n",
     "plt.xlabel('z')\n",
