--- a/working/L06_GaussianMixture.ipynb
+++ b/working/L06_GaussianMixture.ipynb
@@ -80,7 +80,7 @@
    "source": [
     "Fixing bin size \n",
     "\n",
-    "**\"Scott's rule** suggests that the optimal bin width is\n",
+    "**\"Scott's rule\"** suggests that the optimal bin width is\n",
     "\n",
     "$$\\Delta_b = \\frac{3.5 \\sigma}{N^{1/3}}$$\n",
     "\n",
