--- a/working/L03_Horses.ipynb
+++ b/working/L03_Horses.ipynb
@@ -46,7 +46,7 @@
    "id": "32675d40",
    "metadata": {},
    "source": [
-    "Plot the resulting probability distribution. Careful with the normalization"
+    "I plot the resulting probability distribution."
    ]
   },
   {
@@ -132,7 +132,7 @@
    "id": "ba59d799",
    "metadata": {},
    "source": [
-    "How does it look like? Again try to fit it by hand."
+    "I try to fit it by hand."
    ]
   },
   {
