--- a/working/L17_SupernovaDistances-PyMC.ipynb
+++ b/working/L17_SupernovaDistances-PyMC.ipynb
@@ -562,6 +562,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "525fe34c",
+   "metadata": {},
+   "source": [
+    "I can also take into account the bandwidths of the kernel."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 63,
    "id": "a76a7594",
@@ -630,7 +638,7 @@
    "id": "86c866a1",
    "metadata": {},
    "source": [
-    "**Learning curves**"
+    "I want to ask myself if more data could improve the performances, therefore it is useful to condsider **learning curves**."
    ]
   },
   {
@@ -695,6 +703,14 @@
     "From the above graph i can conclude that:\n",
     "- since the validation error is so high and seems to not drop with the increase of the dataset, the model is too simple (underfitting)\n",
     "- the almost constant trend of the validation error points out that the model will not add any information if the number of datapoints increases.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d994b564",
+   "metadata": {},
+   "source": [
+    "I now separate the fit with all the dataset and the one using only the training set."
    ]
   },
   {
