--- a/working/L18_SupernovaDistances_II.ipynb
+++ b/working/L18_SupernovaDistances_II.ipynb
@@ -323,32 +323,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "49a70d08",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'nsteps = int(1e4)\\nnwalkers, ndim = 5, 2\\nstarting_guess = np.array([0.5, 80]) + 1e-1 * np.random.randn(nwalkers, ndim)\\n\\nsampler = emcee.EnsembleSampler(nwalkers, ndim, log_posterior)\\nsampler.run_mcmc(starting_guess, nsteps);'"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "'''nsteps = int(1e4)\n",
-    "nwalkers, ndim = 5, 2\n",
-    "starting_guess = np.array([0.5, 80]) + 1e-1 * np.random.randn(nwalkers, ndim)\n",
-    "\n",
-    "sampler = emcee.EnsembleSampler(nwalkers, ndim, log_posterior)\n",
-    "sampler.run_mcmc(starting_guess, nsteps);'''"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 13,
    "id": "a4121401",
    "metadata": {},
@@ -568,32 +542,6 @@
     "\n",
     "def log_posterior_nolastpoints(theta):\n",
     "    return LogLikelihood_nolastpoints(theta) + log_prior(theta)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "751b26d7",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'nsteps = int(1e4)\\nnwalkers, ndim = 5, 2\\nstarting_guess = np.array([0.5, 80]) + 1e-1 * np.random.randn(nwalkers, ndim)\\n\\nsampler = emcee.EnsembleSampler(nwalkers, ndim, log_posterior_nolastpoints)\\nsampler.run_mcmc(starting_guess, nsteps);'"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "'''nsteps = int(1e4)\n",
-    "nwalkers, ndim = 5, 2\n",
-    "starting_guess = np.array([0.5, 80]) + 1e-1 * np.random.randn(nwalkers, ndim)\n",
-    "\n",
-    "sampler = emcee.EnsembleSampler(nwalkers, ndim, log_posterior_nolastpoints)\n",
-    "sampler.run_mcmc(starting_guess, nsteps);'''"
    ]
   },
   {
@@ -883,32 +831,6 @@
     "def log_posterior_noDE(theta):\n",
     "\n",
     "    return LogLikelihood_noDE(theta) + log_prior_noDE(theta)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "id": "ac04437a",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'nsteps = int(1e4)\\nnwalkers, ndim = 5, 1\\nstarting_guess = 80 + 1e-1 * np.random.randn(nwalkers, ndim)\\n\\nsampler = emcee.EnsembleSampler(nwalkers, ndim, log_posterior_noDE)\\nsampler.run_mcmc(starting_guess, nsteps);'"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "'''nsteps = int(1e4)\n",
-    "nwalkers, ndim = 5, 1\n",
-    "starting_guess = 80 + 1e-1 * np.random.randn(nwalkers, ndim)\n",
-    "\n",
-    "sampler = emcee.EnsembleSampler(nwalkers, ndim, log_posterior_noDE)\n",
-    "sampler.run_mcmc(starting_guess, nsteps);'''"
    ]
   },
   {
@@ -1348,7 +1270,7 @@
     "\n",
     "uniform_samples = np.random.rand(1000)\n",
     "\n",
-    "z_new = np.interp(uniform_samples, cdf_z, z_sample)"
+    "z_new = np.interp(uniform_samples, cdf_z, z_sample) # i take other redshift points following the original z distribution"
    ]
   },
   {
