--- a/working/L06_GaussianMixture.ipynb
+++ b/working/L06_GaussianMixture.ipynb
@@ -88,7 +88,7 @@
     "\n",
     "$$\\Delta_b = \\frac{2(q_{75}-q_{25})}{N^{1/3}} = \\frac{2.7 \\sigma_G}{N^{1/3}}$$\n",
     "\n",
-    "where $\\sigma_G$ can be computed through astroML."
+    "where the rank-based estimate of the standard deviation $\\sigma_G$ can be computed through astroML."
    ]
   },
   {
@@ -384,7 +384,7 @@
    "id": "55160bed",
    "metadata": {},
    "source": [
-    "Plot the preferred solution on top of the input data. You should get a very nice fit!"
+    "Plot the preferred solution on top of the input data."
    ]
   },
   {
