--- a/working/L03_Integrals.ipynb
+++ b/working/L03_Integrals.ipynb
@@ -214,7 +214,7 @@
    "id": "22591797",
    "metadata": {},
    "source": [
-    "I do it many times. For a given $N$, how are the result distributed? "
+    "I do it many times. For a given $N$, how are the results distributed? "
    ]
   },
   {
