--- a/working/L04_CloningQSOs.ipynb
+++ b/working/L04_CloningQSOs.ipynb
@@ -329,7 +329,7 @@
    "source": [
     "Let's try to assume that quasars are distributed uniformly in comoving volume in the Universe.\n",
     "\n",
-    "We use the cosmological parameters as measured by the Plack satellite, which is a flat $\\Lambda$ CDM model"
+    "We use the cosmological parameters as measured by the Planck satellite, which is a flat $\\Lambda$ CDM model."
    ]
   },
   {
