--- a/working/L06_GaussianMixture.ipynb
+++ b/working/L06_GaussianMixture.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "Many problems in astrophysics give rise to data with multiple modes. This is typically because different processes physical processes contribute to the observed dataset.  \n",
     "\n",
-    "For instance, one of the most outstanding question in gravitational-wave astrophysics is the formation channel of binary black holes. Leading scenarions include the evolution of isolated binaries in the galactic field and the dynamica assembly of sources in dense environments like globular clusters."
+    "For instance, one of the most outstanding question in gravitational-wave astrophysics is the formation channel of binary black holes. Leading scenarios include the evolution of isolated binaries in the galactic field and the dynamical assembly of sources in dense environments like globular clusters."
    ]
   },
   {
