--- a/working/L07_KDEs.ipynb
+++ b/working/L07_KDEs.ipynb
@@ -512,7 +512,7 @@
     "I know that $f(\\chi) = \\sqrt{\\frac{1+\\sqrt{1-\\chi^2}}{2}}$ and i find its inverse on $\\chi$: \n",
     "$$\\chi = \\sqrt{1-(2f^2 -1)^2}$$\n",
     "\n",
-    "Its derivative can be computed easily as \n",
+    "Its derivative can be computed as \n",
     "\n",
     "$$\\frac{d}{df}(\\sqrt{1-(2f^2 -1)^2}) = \\frac{-4(2f^2 -1)^2}{\\sqrt{1-(2f^2 -1)^2}}$$\n",
     "\n",
