--- a/working/L12_TheTransientUniverse.ipynb
+++ b/working/L12_TheTransientUniverse.ipynb
@@ -200,11 +200,7 @@
     "    \n",
     "    x = np.array(u)\n",
     "    \n",
-    "    '''lower_bound = [0, 0, 0, np.exp(-5)]\n",
-    "    upper_bound = [50, 50, 100, np.exp(5)]\n",
-    "    \n",
-    "    x = [lower_bound[i] + u[i] * (upper_bound[i] - lower_bound[i]) for i in range(len(u))]'''\n",
-    "    \n",
+    "    # here the ppf returns the exact point where the probability of everything to the left is equal to u\n",
     "    x[0] = scipy.stats.uniform(loc=Amin,scale=Amax-Amin).ppf(u[0])\n",
     "    x[1] = scipy.stats.uniform(loc=bmin,scale=bmax-bmin).ppf(u[1])\n",
     "    x[2] = scipy.stats.uniform(loc=t0min,scale=t0max-t0min).ppf(u[2])\n",
@@ -614,10 +610,6 @@
     "    \n",
     "    x = np.array(u)\n",
     "    \n",
-    "    '''lower_bound = [0, 0, 0, 0]\n",
-    "    upper_bound = [50, 50, 100, 10]\n",
-    "    \n",
-    "    x = [lower_bound[i] + u[i] * (upper_bound[i] - lower_bound[i]) for i in range(len(u))]'''\n",
     "    \n",
     "    x[0] = scipy.stats.uniform(loc=Amin,scale=Amax-Amin).ppf(u[0])\n",
     "    x[1] = scipy.stats.uniform(loc=bmin,scale=bmax-bmin).ppf(u[1])\n",
