--- a/working/L13_Classification.ipynb
+++ b/working/L13_Classification.ipynb
@@ -871,9 +871,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "374d4002",
+   "metadata": {},
+   "source": [
+    "From these results, the better performing model seems to be the K-Nearest Neighboor classifier."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0cebbfb7",
+   "id": "bd4269a1",
    "metadata": {},
    "outputs": [],
    "source": []
