--- a/working/L19_Galaxy_vs_Quasars.ipynb
+++ b/working/L19_Galaxy_vs_Quasars.ipynb
@@ -708,7 +708,7 @@
    "id": "34f28f6a",
    "metadata": {},
    "source": [
-    "By looking at the AUC valies, the better performing classifier is GMMBayes."
+    "By looking at the AUC values, the better performing classifier is GMMBayes."
    ]
   },
   {
