--- a/working/L03_Integrals.ipynb
+++ b/working/L03_Integrals.ipynb
@@ -14,7 +14,16 @@
    "metadata": {},
    "source": [
     "Using Monte Carlo integration, check that  \n",
-    "<center> $\\int_{0}^{\\infty} x^3 exp( -\\frac{x^2}{2\\sigma^2} ) dx = 2\\sigma^4$ </center>"
+    "<center> $ I = \\int_{0}^{\\infty} x^3 exp \\left( -\\frac{x^2}{2\\sigma^2} \\right) dx = 2\\sigma^4 $ <center>\n",
+    "\n",
+    "I now write the gaussian pdf with $\\mu = 0$:\n",
+    "<center> $ \\frac{1}{\\sigma \\sqrt{2 \\pi}} exp \\left( -\\frac{x^2}{2\\sigma^2} \\right) $ <center>\n",
+    "\n",
+    "and since this is normalized between $-\\infty$ and $+\\infty$, the half-gaussian pdf will be\n",
+    "<center> $ p(x) = 2 \\frac{1}{\\sigma \\sqrt{2 \\pi}} exp \\left( -\\frac{x^2}{2\\sigma^2} \\right) $ <center>\n",
+    "\n",
+    "for which, the integral between $0$ and $+\\infty$ gives 1. Therefore:\n",
+    "<center> $ I = \\sigma \\sqrt{\\frac{\\pi}{2}} \\int_{0}^{\\infty} x^3 dx $ <center>"
    ]
   },
   {
@@ -96,8 +105,8 @@
    "outputs": [],
    "source": [
     "def integral(N, sigma):\n",
-    "    numeri_casuali = halfnorm.rvs(loc=0, scale=sigma, size=N)\n",
-    "    return np.sqrt(np.pi / 2) * sigma * np.mean(numeri_casuali**3)\n",
+    "    dist = halfnorm.rvs(loc=0, scale=sigma, size=N)\n",
+    "    return np.sqrt(np.pi / 2) * sigma * np.mean(dist**3)\n",
     "\n",
     "def truevalue(sigma):\n",
     "    return 2*sigma**4"
