--- a/working/L07_KDEs.ipynb
+++ b/working/L07_KDEs.ipynb
@@ -41,9 +41,7 @@
     "from astropy.visualization.hist import hist as fancyhist\n",
     "from sklearn.neighbors import KernelDensity\n",
     "from sklearn.model_selection import GridSearchCV\n",
-    "from tqdm import tqdm\n",
-    "#import re\n",
-    "#import math"
+    "from tqdm import tqdm"
    ]
   },
   {
@@ -293,6 +291,14 @@
     "h_f = fancyhist(f, bins=bin_width(f), histtype=\"step\", density=True)\n",
     "plt.plot(x, PDF_f, color='red')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8553239d",
+   "metadata": {},
+   "source": [
+    "**Kolmogorov - Smirnov Test**"
    ]
   },
   {
