--- a/working/L14_GammaRayBursts.ipynb
+++ b/working/L14_GammaRayBursts.ipynb
@@ -206,7 +206,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#kde = KernelDensity(kernel='gaussian', bandwidth=0.08).fit(skT90) \n",
     "kde = KernelDensity(kernel='gaussian', bandwidth=h_opt).fit(skT90) \n",
     "xgrid=np.logspace(-3,3,100)\n",
     "ygrid = np.exp(kde.score_samples(np.log10(xgrid)[:,np.newaxis]))"
@@ -472,9 +471,9 @@
    "source": [
     "X = []\n",
     "for i in range(len(T90_reduced)):\n",
-    "    entrata_T90 = np.log10(T90_reduced[i])\n",
-    "    entrata_fluence_1 = np.log10(fluence_reduced[i])\n",
-    "    X.append([entrata_T90, entrata_fluence_1])\n",
+    "    component_T90 = np.log10(T90_reduced[i])\n",
+    "    component_fluence_1 = np.log10(fluence_reduced[i])\n",
+    "    X.append([component_T90, component_fluence_1])\n",
     "    \n",
     "X = np.array(X)"
    ]
@@ -1551,9 +1550,7 @@
     "# Compute the Mean-shift clustering\n",
     "from sklearn.cluster import MeanShift, estimate_bandwidth\n",
     "\n",
-    "#scaler = preprocessing.StandardScaler()\n",
     "bandwidth = 0.4\n",
-    "#bandwidth = estimate_bandwidth(X, quantile=0.6) # this takes a long time...beware\n",
     "ms = MeanShift(bandwidth=bandwidth, \n",
     "               bin_seeding=True, \n",
     "               cluster_all=False,\n",
