--- a/working/L18_SupernovaDistances_II.ipynb
+++ b/working/L18_SupernovaDistances_II.ipynb
@@ -266,8 +266,7 @@
    "source": [
     "import emcee\n",
     "import scipy.stats as scistats\n",
-    "import corner\n",
-    "import dynesty"
+    "import corner"
    ]
   },
   {
