--- a/working/L19_Galaxy_vs_Quasars.ipynb
+++ b/working/L19_Galaxy_vs_Quasars.ipynb
@@ -473,7 +473,7 @@
    "id": "0e2568dd",
    "metadata": {},
    "source": [
-    "**Gaussian Naive Baies**"
+    "**Gaussian Naive Bayes**"
    ]
   },
   {
